Rename CLI from gemma-3n to firesense
- Update pyproject.toml to use 'firesense' as the CLI entry point
- Update README.md with new firesense commands
- Update demo-system-design.md documentation
- Add executable firesense wrapper script for direct CLI usage

The CLI can now be invoked as:
- `uv run firesense` (using uv)
- `./firesense` (using the wrapper script)
- `firesense` (if added to PATH)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ youtube = [
 ]
 
 [project.scripts]
-gemma-3n = "gemma_3n.__main__:main"
+firesense = "gemma_3n.__main__:main"
 
 [build-system]
 requires = ["hatchling"]
