--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,13 @@ dependencies = [
     "opencv-python>=4.8.0",
     "pillow>=10.0.0",
     "numpy>=1.24.0",
+    "yt-dlp>=2024.1.0",
     # ML/Model - E4B specific
     "torch>=2.1.0",
     "transformers>=4.36.0",
     "accelerate>=0.25.0",
     "sentencepiece>=0.1.99",
+    "unsloth>=2024.1",
     # Vision
     "torchvision>=0.16.0",
     "timm>=0.9.0",
