Remove TestPyPI configuration and streamline PyPI publishing
- Simplified GitHub Actions workflow to only publish to PyPI
- Removed TestPyPI references from all scripts and configs
- Updated documentation for PyPI-only publishing workflow
- Streamlined Makefile targets for cleaner publishing process
- Added .pypirc to .gitignore to prevent credential exposure

--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,4 @@ ui/analysis_config.json
 
 # Allow test fixtures (small files only)
 !tests/fixtures/*.jpg
-!tests/fixtures/*.mp4
+!tests/fixtures/*.mp4.pypirc
