--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
         uv pip install -e ".[dev]"
     
     - name: Run tests
-      run: uv run pytest --cov=gemma_3n --cov-report=xml
+      run: uv run pytest --cov=src/gemma_3n --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
