--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,8 @@ packages = ["src/gemma_3n"]
 [tool.ruff]
 line-length = 88
 target-version = "py311"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -110,8 +112,10 @@ select = [
 ]
 ignore = ["E501"]  # line too long
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["T20"]  # Allow print statements in tests
+"src/gemma_3n/fire_detection/*.py" = ["T201"]  # Allow print in CLI tools
+"src/gemma_3n/fire_detection/config.py" = ["N805"]  # Allow cls in pydantic validators
 
 [tool.black]
 line-length = 88
