--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -58,17 +58,16 @@ jobs:
 
     - name: Install build dependencies
       run: |
-        uv add --dev build twine
+        uv add --dev build
 
     - name: Build Package
       run: uv run python -m build
 
     - name: Publish Package to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        uv run twine upload dist/*
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        verbose: true
 
     - name: Create Git Tag
       run: |
