--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "firesense"
-version = "0.2.0"
+version = "0.7.0"
 description = "AI-powered fire detection system using Gemma 3N E4B vision model"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -90,6 +90,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/gemma_3n"]
+
+[tool.uv]
+package = true
 
 [tool.ruff]
 line-length = 88
