--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,9 @@ ui/analysis_config.json
 # Allow test fixtures (small files only)
 !tests/fixtures/*.jpg
 !tests/fixtures/*.mp4.pypirc
+# src/firesense/demo-ui/ - needed for package distribution
+
+# Node.js dependencies
+node_modules/
+demo-ui/node_modules/
+*/node_modules/
