--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "firesense"
-version = "0.8.4"
+version = "0.8.8"
 description = "AI-powered fire detection system using Gemma 3N E4B vision model"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -92,8 +92,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/firesense"]
 
-[tool.hatch.build.targets.wheel.shared-data]
-"demo-ui/dist" = "share/firesense/demo-ui"
+[tool.hatch.build.targets.wheel.sources]
+"src" = ""
 
 [tool.uv]
 package = true
