--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,8 +120,8 @@ ignore = ["E501"]  # line too long
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["T20"]  # Allow print statements in tests
-"src/gemma_3n/fire_detection/*.py" = ["T201"]  # Allow print in CLI tools
-"src/gemma_3n/fire_detection/config.py" = ["N805"]  # Allow cls in pydantic validators
+"src/firesense/fire_detection/*.py" = ["T201"]  # Allow print in CLI tools
+"src/firesense/fire_detection/config.py" = ["N805"]  # Allow cls in pydantic validators
 
 [tool.black]
 line-length = 88
@@ -162,7 +162,9 @@ exclude_lines = [
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
     "build>=1.2.2.post1",
     "python-dotenv>=1.1.1",
+    "ruff>=0.12.7",
     "twine>=6.1.0",
 ]
