--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,12 +116,15 @@ select = [
     "SIM", # flake8-simplify
     "RUF", # Ruff-specific rules
 ]
-ignore = ["E501"]  # line too long
+ignore = ["E501", "DTZ005", "RUF001", "B008"]  # line too long, timezone, ambiguous chars, function calls in defaults
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["T20"]  # Allow print statements in tests
 "src/firesense/fire_detection/*.py" = ["T201"]  # Allow print in CLI tools
 "src/firesense/fire_detection/config.py" = ["N805"]  # Allow cls in pydantic validators
+"examples/*" = ["T201", "E402", "F401", "F841", "B904"]  # Allow print, imports, unused vars in examples
+"scripts/*" = ["T201", "E722", "B904"]  # Allow print and bare except in scripts
+"localscripts/*" = ["T201"]  # Allow print statements in local scripts
 
 [tool.black]
 line-length = 88
