Add pipeline diagram to repository
- Add diagrams/pipeline.png showing FireSense processing pipeline
- Update .gitignore to allow PNG files in diagrams directory

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ ui/analysis_config.json
 !docs/images/*.jpg
 !README_images/*.png
 !examples/small_*.jpg
+!diagrams/*.png
 
 # Allow configuration examples
 !config/example_*.json
