Add images directory with pipeline and presentation images
- Update .gitignore to allow PNG and JPG files in images directory
- Add pipeline.png showing FireSense processing pipeline
- Add presentation.png for video preview in README

--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,8 @@ ui/analysis_config.json
 !README_images/*.png
 !examples/small_*.jpg
 !diagrams/*.png
+!images/*.png
+!images/*.jpg
 
 # Allow configuration examples
 !config/example_*.json
