Set Render instance to standard plan
- Add plan: standard to render.yaml for better performance
- Avoids cold starts and provides more resources than free tier

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     name: firesense-demo
     runtime: docker
     dockerfilePath: ./Dockerfile
+    plan: standard  # Use standard instance for better performance
     envVars:
       - key: DEMO_LOCAL_MODE
         value: "0"
